# sd-team-e

./: README.md
satelite-api/: .gitignore  README.md  clear_location_db.py  filter_google_org_locations.py  get_google_locations.py  get_org_locations.py  get_yahoo_inners.py  google_to_lat_lng.py  main.py  merge_google_org_locations.py  mesh_3_to_2.py  mesh_to_lat_lng.py  pyproject.toml  write_embeddings_to_db.py  write_locations_to_db.py  write_reviews_to_db.py
satelite-api/resources/tokyo-mesh/: 13-2-lat-lng-origin.csv  13-2-lat-lng.csv  13-2.csv  13.csv
satelite-api/rest/: google.rest  organizer.rest  search-embeddings.rest  yahoo-search.rest
satelite-api/utils/: const.py
satelite-api/utils/city/: name_to_code.py
satelite-api/utils/file/: create_dir.py
satelite-api/utils/llm/: embed_locations.py  review_locations.py
satelite-api/vector_search/: README.md  docker-compose.yaml  template.yaml
satelite-api/vector_search/.devcontainer/: devcontainer.json
satelite-api/vector_search/search_embeddings_app/: Dockerfile  app.py  requirements.txt
satelite-api/vector_search/search_embeddings_app/app_utils/: json_serializer.py  lambda_app_logger.py  search_place_by_text.py  ssm_param.py
satelite-api/vector_search/search_embeddings_app/app_utils/db/: get_merged_locations.py
satelite-api/vector_search/search_embeddings_app/app_utils/embed/: calc_similarity.py  embed.py
satelite-front/: package-lock.json  package.json
satelite-front/app/: globals.css  layout.tsx  page.tsx
satelite-front/app/components/: votingLocationOptimizer.tsx
